// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarList renders with collapsed avatar count if > 5 users 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "3",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "4",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "5",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "6",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <Tooltip
          title="1 other users"
        >
          <CollapsedUsers
            className="tip"
            size={28}
            title="1 other users"
          >
            <div
              className="tip css-17ychq3-CollapsedUsers-Circle e1axh4r51"
              size={28}
              title="1 other users"
            >
              <Plus>
                <span
                  className="css-sduhlv-Plus e1axh4r52"
                >
                  +
                </span>
              </Plus>
              1
            </div>
          </CollapsedUsers>
        </Tooltip>
        <StyledAvatar
          hasTooltip={true}
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "2",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="3"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "3",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "3",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "3",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="4"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "4",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "4",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "4",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="5"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "5",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "5",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "5",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;

exports[`AvatarList renders with user avatars 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <StyledAvatar
          hasTooltip={true}
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
              gravatar={false}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "2",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-ptswrs-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                round={true}
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="letter_avatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-ptswrs-StyledAvatar-Circle e1axh4r50"
                    round={true}
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-1t1vzng-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <LetterAvatar
                        displayName="Foo Bar"
                        identifier="foo@example.com"
                        round={true}
                      >
                        <Svg
                          round={true}
                          viewBox="0 0 120 120"
                        >
                          <svg
                            className="css-1r4mnb9-Svg e1knxa8x0"
                            viewBox="0 0 120 120"
                          >
                            <rect
                              fill="#315cac"
                              height="120"
                              rx="15"
                              ry="15"
                              width="120"
                              x="0"
                              y="0"
                            />
                            <text
                              fill="#FFFFFF"
                              fontSize="65"
                              style={
                                Object {
                                  "dominantBaseline": "central",
                                }
                              }
                              textAnchor="middle"
                              x="50%"
                              y="50%"
                            >
                              FB
                            </text>
                          </svg>
                        </Svg>
                      </LetterAvatar>
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;
